tests/js/valid/functions/record-polymorphism.buri
@export
age = 314

person = { name: "Derek", age: age }
getAge = (arg) => arg.age

@export
retrievedAge = getAge(person)