tests/js/invalid/function/invalid-record-polymorphism.buri
person = { name: "Derek" }
getAge = (arg) => arg.age
age = getAge(person)